<?xml version="1.0"?>
<package format="3">
  <name>crl_tron1a_rlcontroller</name>
  <version>0.1.0</version>
  <description>Tron1A RL controllers integrated with CRL Humanoid stack.</description>
  <maintainer email="jin.cheng@inf.ethz.ch">Jin Cheng</maintainer>
  <license>ETH Zurich Computational Robotics Lab</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>crl_humanoid_commons</depend>
  <depend>crl_fsm</depend>
  <depend>crl_ros_helper</depend>
  <build_depend>crl_humanoid_simulator</build_depend>
  <exec_depend>crl_humanoid_simulator</exec_depend>
  <depend>crl_humanoid_hardware</depend>
  <depend>crl_humanoid_monitor</depend>
  <depend>onnxruntime</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
