<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>optitrack_adaptor</name>
  <version>0.0.0</version>
  <description>ROS 2 adapter for the OptiTrack motion capture system</description>
  <maintainer email="allenhui1220@outlook.com">allen</maintainer>
  <license>ETH Zurich Computational Robotics Lab</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>optitrack_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
